--- a/.github/workflows/master_myreactnodeapi-abcxyz.yml
+++ b/.github/workflows/master_myreactnodeapi-abcxyz.yml
@@ -6,37 +6,45 @@ name: Build and deploy Node.js app to Azure Web App - myreactnodeapi-abcXYZ
 on:
   push:
     branches:
-      - master
-  workflow_dispatch:
+      - master # Or 'main', depending on your primary branch name
+  workflow_dispatch: # Allows manual trigger from GitHub Actions tab
+
+env:
+  AZURE_WEBAPP_NAME: 'myreactnodeapi-abcXYZ'    # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: './backend'      # set this to the path to your backend code
+  NODE_VERSION: '20.x' # set this to the Node.js version to use
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Specify runner OS
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4 # Checkout the repository code
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: ${{ env.NODE_VERSION }}
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install Backend Dependencies
+        run: npm install
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Run Backend Tests
+        run: npm test --if-present
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-      - name: Upload artifact for deployment job
+      - name: Zip Backend for Deployment
+        run: zip -r backend.zip .
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+      - name: Upload Backend Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: release.zip
+          name: backend-app-artifact
+          path: backend/backend.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,30 +53,22 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download Backend Artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_460837E0D64F42CF84BAD6BC7D1B4DA2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AE166161F8AE41A6A1B56E30AC7906E0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_35068C0B460F42918CA82EE407B9161B }}
+          name: backend-app-artifact
+          path: ${{ runner.temp }}/backend-package
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'myreactnodeapi-abcXYZ'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
-          package: .
-          
+          package: ${{ runner.temp }}/backend-package/backend.zip
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_460837E0D64F42CF84BAD6BC7D1B4DA2 }}
+
