--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -1,6 +1,10 @@
 {
   "routes": [
     {
+      "route": "/api/*",
+      "rewrite": "http://application_tier_instance_public_ip:3200/api/:path*"
+    },
+    {
       "route": "/*",
       "serve": "/index.html",
       "statusCode": 200
