--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "route": "/api/*",
-      "rewrite": "http://application_tier_instance_public_ip:3200/api/:path*"
+      "rewrite": "https://myreactnodeapi-abcxyz-a9dweqh3amcebrf8.westus2-01.azurewebsites.net:3200/api/:path*"
     },
     {
       "route": "/*",
